# cookiecutter-python-project

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  _quarto.yml  pyproject.toml
{{cookiecutter.repo_name}}/.github/instructions/: python.instructions.md  quarto.instructions.md
{{cookiecutter.repo_name}}/.github/workflows/: precommit-diff.yml
{{cookiecutter.repo_name}}/docs/notebooks/: index.qmd
{{cookiecutter.repo_name}}/docs/research/: index.qmd
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py
